# pdf-data-extract

./: .gitignore  pyproject.toml  pyrightconfig.json
pdf_summarizer/: main.py
